--- a/src/index.template.html
+++ b/src/index.template.html
@@ -9,7 +9,7 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>">
     <meta http-equiv="Content-Security-Policy"
-      content="default-src 'none'; font-src 'self' data:; img-src 'self' data:; object-src 'none'; script-src 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; connect-src 'self' <%= process.env.DEV ? 'ws: wss:' : '' %> <%= process.env.WEBAPI_URL %> <%= process.env.CSP_URLS %>" />
+      content="upgrade-insecure-requests; default-src 'none'; font-src 'self' data:; img-src 'self' data:; object-src 'none'; script-src 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; connect-src 'self' <%= process.env.DEV ? 'ws: wss:' : '' %> <%= process.env.WEBAPI_URL %> <%= process.env.CSP_URLS %> <%= !!process.env.URL_SCHEME ? (process.env.URL_SCHEME + ':') : '' %>" />
     <% if (process.env.BACKEND != "demo" ) { %>
     <meta name="robots" content="noindex, nofollow, noarchive">
     <% } %>
